--- a/todo
+++ b/todo
@@ -19,6 +19,17 @@
              |--[] 추천여부 판단하여 화면에 뿌리기
 
 
+
+[] db 데이터 입력
+|-- [] 추천 가격 테이블 데이터 입력( 테이블명 : RECOMMEND_PRICE, )
+|-- [] 전체 db에 가져올 시연용 데이터 입력 - 시리즈 별 5개씩 (식별을 위한 추가 컬럼 생성 필요['IDENTI'])
+
+
+
+
+
+
+
 iphone_models_combined = [
     "아이폰X 64GB", "아이폰X 256GB",
     "아이폰XR 64GB", "아이폰XR 128GB", "아이폰XR 256GB",
